ISBN implemented
